feat : upgrade to java 21 (#403)
* feat : upgrade to java 21

* format